--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
     <title>File Upload JS</title>
   </head>
   <body>
+    <div class="container">
+      <input type="file" id="file-input" multiple />
+      <label for="file-input">
+        <i class="fa-regular fa-arrow-up-from-bracket"></i>
+        &nbsp; Choose Files To Upload
+      </label>
+      <div id="num-of-files">No Files Choosen</div>
+      <ul id="files-list"></ul>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
